Icon buttons added

--- a/src/app/components/crear-producto/crear-producto.component.html
+++ b/src/app/components/crear-producto/crear-producto.component.html
@@ -38,8 +38,8 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <button routerLink="/" class="btn btn-danger btn-lg float-start">VOLVER</button>
-                            <button type="submit" [disabled]="productoForm.invalid" class="btn btn-success btn-lg float-end">CONFIRMAR</button>
+                            <button routerLink="/" class="btn btn-danger btn-lg float-start"> <i class="fa-solid fa-circle-arrow-left"></i> VOLVER<i class="arrow-left-circle-fill"></i></button>
+                            <button type="submit" [disabled]="productoForm.invalid" class="btn btn-success btn-lg float-end"><i class="fa-solid fa-circle-check"></i> CONFIRMAR </button>
                         </div>
                     </form>
                 </div>
